# VideoTransmission

./: .gitignore  CMakeLists.txt  README.md  cudaMath.h  preproc.cu  v4l2_cap.c  v4l2_cap.cu  v4l2_cap_tcp.c  v4l2_cap_tcp_client.c  v4l2_cap_tcp_client_encode.c  v4l2_cap_tcp_client_encode.cu  v4l2_cap_tcp_server.c  v4l2_cap_tcp_server_encode.c  v4l2_cap_tcp_server_encode.cu
DS_Timer/: DS_definitions.h  DS_timer.cpp  DS_timer.h
NEON/: neon.cpp  neon.h
